--- a/index.html
+++ b/index.html
@@ -73,7 +73,16 @@
         </div>
     </div>
 
-    <!-- Game Script (single-file architecture for local 2-player) -->
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+
+    <!-- App Scripts -->
+    <script src="js/firebase.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/lobby.js"></script>
+    <script src="js/board.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
